src/autocoder_nano/core/dsl/parser/DSLSQLParser.py
# Generated from DSLSQL.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing import TextIO
import sys



class DSLSQLParser ( Parser ):

    grammarFileName = "DSLSQL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'load'", "'LOAD'", "'.'", "'options'",
                     "'where'", "'as'", "'save'", "'SAVE'", "'partitionBy'",
                     "'select'", "'SELECT'", "';'", "'insert'", "'INSERT'",
                     "'create'", "'CREATE'", "'drop'", "'DROP'", "'refresh'",
                     "'REFRESH'", "'set'", "'SET'", "'='", "'connect'",
                     "'CONNECT'", "'train'", "'TRAIN'", "'run'", "'RUN'",
                     "'register'", "'REGISTER'", "'unRegister'", "'UNREGISTER'",
                     "'include'", "'INCLUDE'", "'overwrite'", "'append'",
                     "'errorIfExists'", "'ignore'", "'and'", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "'/**/'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "STRING", "BLOCK_STRING", "IDENTIFIER",
                      "BACKQUOTED_IDENTIFIER", "SIMPLE_COMMENT", "BRACKETED_EMPTY_COMMENT",
                      "BRACKETED_COMMENT", "WS", "UNRECOGNIZED" ]

    RULE_statement = 0
    RULE_sql = 1
    RULE_overwrite = 2
    RULE_append = 3
    RULE_errorIfExists = 4
    RULE_ignore = 5
    RULE_booleanExpression = 6
    RULE_expression = 7
    RULE_ender = 8
    RULE_format_type = 9
    RULE_path = 10
    RULE_setValue = 11
    RULE_setKey = 12
    RULE_db = 13
    RULE_tableName = 14
    RULE_functionName = 15
    RULE_col = 16
    RULE_qualifiedName = 17
    RULE_identifier = 18
    RULE_strictIdentifier = 19
    RULE_quotedIdentifier = 20

    ruleNames =  [ "statement", "sql", "overwrite", "append", "errorIfExists",
                   "ignore", "booleanExpression", "expression", "ender",
                   "format_type", "path", "setValue", "setKey", "db", "tableName",
                   "functionName", "col", "qualifiedName", "identifier",
                   "strictIdentifier", "quotedIdentifier" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    STRING=41
    BLOCK_STRING=42
    IDENTIFIER=43
    BACKQUOTED_IDENTIFIER=44
    SIMPLE_COMMENT=45
    BRACKETED_EMPTY_COMMENT=46
    BRACKETED_COMMENT=47
    WS=48
    UNRECOGNIZED=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sql(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DSLSQLParser.SqlContext)
            else:
                return self.getTypedRuleContext(DSLSQLParser.SqlContext,i)


        def ender(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DSLSQLParser.EnderContext)
            else:
                return self.getTypedRuleContext(DSLSQLParser.EnderContext,i)


        def getRuleIndex(self):
            return DSLSQLParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = DSLSQLParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DSLSQLParser.T__0) | (1 << DSLSQLParser.T__1) | (1 << DSLSQLParser.T__6) | (1 << DSLSQLParser.T__7) | (1 << DSLSQLParser.T__9) | (1 << DSLSQLParser.T__10) | (1 << DSLSQLParser.T__12) | (1 << DSLSQLParser.T__13) | (1 << DSLSQLParser.T__14) | (1 << DSLSQLParser.T__15) | (1 << DSLSQLParser.T__16) | (1 << DSLSQLParser.T__17) | (1 << DSLSQLParser.T__18) | (1 << DSLSQLParser.T__19) | (1 << DSLSQLParser.T__20) | (1 << DSLSQLParser.T__21) | (1 << DSLSQLParser.T__23) | (1 << DSLSQLParser.T__24) | (1 << DSLSQLParser.T__25) | (1 << DSLSQLParser.T__26) | (1 << DSLSQLParser.T__27) | (1 << DSLSQLParser.T__28) | (1 << DSLSQLParser.T__29) | (1 << DSLSQLParser.T__30) | (1 << DSLSQLParser.T__31) | (1 << DSLSQLParser.T__32) | (1 << DSLSQLParser.T__33) | (1 << DSLSQLParser.T__34) | (1 << DSLSQLParser.SIMPLE_COMMENT))) != 0):
                self.state = 42
                self.sql()
                self.state = 43
                self.ender()
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SqlContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def format_type(self):
            return self.getTypedRuleContext(DSLSQLParser.Format_typeContext,0)


        def path(self):
            return self.getTypedRuleContext(DSLSQLParser.PathContext,0)


        def tableName(self):
            return self.getTypedRuleContext(DSLSQLParser.TableNameContext,0)


        def expression(self):
            return self.getTypedRuleContext(DSLSQLParser.ExpressionContext,0)


        def booleanExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DSLSQLParser.BooleanExpressionContext)
            else:
                return self.getTypedRuleContext(DSLSQLParser.BooleanExpressionContext,i)


        def overwrite(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DSLSQLParser.OverwriteContext)
            else:
                return self.getTypedRuleContext(DSLSQLParser.OverwriteContext,i)


        def append(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DSLSQLParser.AppendContext)
            else:
                return self.getTypedRuleContext(DSLSQLParser.AppendContext,i)


        def errorIfExists(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DSLSQLParser.ErrorIfExistsContext)
            else:
                return self.getTypedRuleContext(DSLSQLParser.ErrorIfExistsContext,i)


        def ignore(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DSLSQLParser.IgnoreContext)
            else:
                return self.getTypedRuleContext(DSLSQLParser.IgnoreContext,i)


        def col(self):
            return self.getTypedRuleContext(DSLSQLParser.ColContext,0)


        def setKey(self):
            return self.getTypedRuleContext(DSLSQLParser.SetKeyContext,0)


        def setValue(self):
            return self.getTypedRuleContext(DSLSQLParser.SetValueContext,0)


        def db(self):
            return self.getTypedRuleContext(DSLSQLParser.DbContext,0)


        def functionName(self):
            return self.getTypedRuleContext(DSLSQLParser.FunctionNameContext,0)


        def SIMPLE_COMMENT(self):
            return self.getToken(DSLSQLParser.SIMPLE_COMMENT, 0)

        def getRuleIndex(self):
            return DSLSQLParser.RULE_sql

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSql" ):
                listener.enterSql(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSql" ):
                listener.exitSql(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSql" ):
                return visitor.visitSql(self)
            else:
                return visitor.visitChildren(self)




    def sql(self):

        localctx = DSLSQLParser.SqlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sql)
        self._la = 0 # Token type
        try:
            self.state = 240
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DSLSQLParser.T__0, DSLSQLParser.T__1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                _la = self._input.LA(1)
                if not(_la==DSLSQLParser.T__0 or _la==DSLSQLParser.T__1):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 51
                self.format_type()
                self.state = 52
                self.match(DSLSQLParser.T__2)
                self.state = 53
                self.path()
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==DSLSQLParser.T__3 or _la==DSLSQLParser.T__4:
                    self.state = 54
                    _la = self._input.LA(1)
                    if not(_la==DSLSQLParser.T__3 or _la==DSLSQLParser.T__4):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==DSLSQLParser.IDENTIFIER or _la==DSLSQLParser.BACKQUOTED_IDENTIFIER:
                    self.state = 57
                    self.expression()


                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==DSLSQLParser.T__39:
                    self.state = 60
                    self.booleanExpression()
                    self.state = 65
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 66
                self.match(DSLSQLParser.T__5)
                self.state = 67
                self.tableName()
                pass
            elif token in [DSLSQLParser.T__6, DSLSQLParser.T__7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 69
                _la = self._input.LA(1)
                if not(_la==DSLSQLParser.T__6 or _la==DSLSQLParser.T__7):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DSLSQLParser.T__35) | (1 << DSLSQLParser.T__36) | (1 << DSLSQLParser.T__37) | (1 << DSLSQLParser.T__38))) != 0):
                    self.state = 74
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [DSLSQLParser.T__35]:
                        self.state = 70
                        self.overwrite()
                        pass
                    elif token in [DSLSQLParser.T__36]:
                        self.state = 71
                        self.append()
                        pass
                    elif token in [DSLSQLParser.T__37]:
                        self.state = 72
                        self.errorIfExists()
                        pass
                    elif token in [DSLSQLParser.T__38]:
                        self.state = 73
                        self.ignore()
                        pass
                    else:
                        raise NoViableAltException(self)

                    self.state = 78
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 79
                self.tableName()
                self.state = 80
                self.match(DSLSQLParser.T__5)
                self.state = 81
                self.format_type()
                self.state = 82
                self.match(DSLSQLParser.T__2)
                self.state = 83
                self.path()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==DSLSQLParser.T__3 or _la==DSLSQLParser.T__4:
                    self.state = 84
                    _la = self._input.LA(1)
                    if not(_la==DSLSQLParser.T__3 or _la==DSLSQLParser.T__4):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==DSLSQLParser.IDENTIFIER or _la==DSLSQLParser.BACKQUOTED_IDENTIFIER:
                    self.state = 87
                    self.expression()


                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==DSLSQLParser.T__39:
                    self.state = 90
                    self.booleanExpression()
                    self.state = 95
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==DSLSQLParser.T__8:
                    self.state = 96
                    self.match(DSLSQLParser.T__8)
                    self.state = 97
                    self.col()


                pass
            elif token in [DSLSQLParser.T__9, DSLSQLParser.T__10]:
                self.enterOuterAlt(localctx, 3)
                self.state = 100
                _la = self._input.LA(1)
                if not(_la==DSLSQLParser.T__9 or _la==DSLSQLParser.T__10):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 104
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 101
                        _la = self._input.LA(1)
                        if _la <= 0 or _la==DSLSQLParser.T__11:
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                    self.state = 106
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

                self.state = 107
                self.match(DSLSQLParser.T__5)
                self.state = 108
                self.tableName()
                pass
            elif token in [DSLSQLParser.T__12, DSLSQLParser.T__13]:
                self.enterOuterAlt(localctx, 4)
                self.state = 109
                _la = self._input.LA(1)
                if not(_la==DSLSQLParser.T__12 or _la==DSLSQLParser.T__13):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DSLSQLParser.T__0) | (1 << DSLSQLParser.T__1) | (1 << DSLSQLParser.T__2) | (1 << DSLSQLParser.T__3) | (1 << DSLSQLParser.T__4) | (1 << DSLSQLParser.T__5) | (1 << DSLSQLParser.T__6) | (1 << DSLSQLParser.T__7) | (1 << DSLSQLParser.T__8) | (1 << DSLSQLParser.T__9) | (1 << DSLSQLParser.T__10) | (1 << DSLSQLParser.T__12) | (1 << DSLSQLParser.T__13) | (1 << DSLSQLParser.T__14) | (1 << DSLSQLParser.T__15) | (1 << DSLSQLParser.T__16) | (1 << DSLSQLParser.T__17) | (1 << DSLSQLParser.T__18) | (1 << DSLSQLParser.T__19) | (1 << DSLSQLParser.T__20) | (1 << DSLSQLParser.T__21) | (1 << DSLSQLParser.T__22) | (1 << DSLSQLParser.T__23) | (1 << DSLSQLParser.T__24) | (1 << DSLSQLParser.T__25) | (1 << DSLSQLParser.T__26) | (1 << DSLSQLParser.T__27) | (1 << DSLSQLParser.T__28) | (1 << DSLSQLParser.T__29) | (1 << DSLSQLParser.T__30) | (1 << DSLSQLParser.T__31) | (1 << DSLSQLParser.T__32) | (1 << DSLSQLParser.T__33) | (1 << DSLSQLParser.T__34) | (1 << DSLSQLParser.T__35) | (1 << DSLSQLParser.T__36) | (1 << DSLSQLParser.T__37) | (1 << DSLSQLParser.T__38) | (1 << DSLSQLParser.T__39) | (1 << DSLSQLParser.STRING) | (1 << DSLSQLParser.BLOCK_STRING) | (1 << DSLSQLParser.IDENTIFIER) | (1 << DSLSQLParser.BACKQUOTED_IDENTIFIER) | (1 << DSLSQLParser.SIMPLE_COMMENT) | (1 << DSLSQLParser.BRACKETED_EMPTY_COMMENT) | (1 << DSLSQLParser.BRACKETED_COMMENT) | (1 << DSLSQLParser.WS) | (1 << DSLSQLParser.UNRECOGNIZED))) != 0):
                    self.state = 110
                    _la = self._input.LA(1)
                    if _la <= 0 or _la==DSLSQLParser.T__11:
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 115
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [DSLSQLParser.T__14, DSLSQLParser.T__15]:
                self.enterOuterAlt(localctx, 5)
                self.state = 116
                _la = self._input.LA(1)
                if not(_la==DSLSQLParser.T__14 or _la==DSLSQLParser.T__15):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DSLSQLParser.T__0) | (1 << DSLSQLParser.T__1) | (1 << DSLSQLParser.T__2) | (1 << DSLSQLParser.T__3) | (1 << DSLSQLParser.T__4) | (1 << DSLSQLParser.T__5) | (1 << DSLSQLParser.T__6) | (1 << DSLSQLParser.T__7) | (1 << DSLSQLParser.T__8) | (1 << DSLSQLParser.T__9) | (1 << DSLSQLParser.T__10) | (1 << DSLSQLParser.T__12) | (1 << DSLSQLParser.T__13) | (1 << DSLSQLParser.T__14) | (1 << DSLSQLParser.T__15) | (1 << DSLSQLParser.T__16) | (1 << DSLSQLParser.T__17) | (1 << DSLSQLParser.T__18) | (1 << DSLSQLParser.T__19) | (1 << DSLSQLParser.T__20) | (1 << DSLSQLParser.T__21) | (1 << DSLSQLParser.T__22) | (1 << DSLSQLParser.T__23) | (1 << DSLSQLParser.T__24) | (1 << DSLSQLParser.T__25) | (1 << DSLSQLParser.T__26) | (1 << DSLSQLParser.T__27) | (1 << DSLSQLParser.T__28) | (1 << DSLSQLParser.T__29) | (1 << DSLSQLParser.T__30) | (1 << DSLSQLParser.T__31) | (1 << DSLSQLParser.T__32) | (1 << DSLSQLParser.T__33) | (1 << DSLSQLParser.T__34) | (1 << DSLSQLParser.T__35) | (1 << DSLSQLParser.T__36) | (1 << DSLSQLParser.T__37) | (1 << DSLSQLParser.T__38) | (1 << DSLSQLParser.T__39) | (1 << DSLSQLParser.STRING) | (1 << DSLSQLParser.BLOCK_STRING) | (1 << DSLSQLParser.IDENTIFIER) | (1 << DSLSQLParser.BACKQUOTED_IDENTIFIER) | (1 << DSLSQLParser.SIMPLE_COMMENT) | (1 << DSLSQLParser.BRACKETED_EMPTY_COMMENT) | (1 << DSLSQLParser.BRACKETED_COMMENT) | (1 << DSLSQLParser.WS) | (1 << DSLSQLParser.UNRECOGNIZED))) != 0):
                    self.state = 117
                    _la = self._input.LA(1)
                    if _la <= 0 or _la==DSLSQLParser.T__11:
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 122
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [DSLSQLParser.T__16, DSLSQLParser.T__17]:
                self.enterOuterAlt(localctx, 6)
                self.state = 123
                _la = self._input.LA(1)
                if not(_la==DSLSQLParser.T__16 or _la==DSLSQLParser.T__17):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DSLSQLParser.T__0) | (1 << DSLSQLParser.T__1) | (1 << DSLSQLParser.T__2) | (1 << DSLSQLParser.T__3) | (1 << DSLSQLParser.T__4) | (1 << DSLSQLParser.T__5) | (1 << DSLSQLParser.T__6) | (1 << DSLSQLParser.T__7) | (1 << DSLSQLParser.T__8) | (1 << DSLSQLParser.T__9) | (1 << DSLSQLParser.T__10) | (1 << DSLSQLParser.T__12) | (1 << DSLSQLParser.T__13) | (1 << DSLSQLParser.T__14) | (1 << DSLSQLParser.T__15) | (1 << DSLSQLParser.T__16) | (1 << DSLSQLParser.T__17) | (1 << DSLSQLParser.T__18) | (1 << DSLSQLParser.T__19) | (1 << DSLSQLParser.T__20) | (1 << DSLSQLParser.T__21) | (1 << DSLSQLParser.T__22) | (1 << DSLSQLParser.T__23) | (1 << DSLSQLParser.T__24) | (1 << DSLSQLParser.T__25) | (1 << DSLSQLParser.T__26) | (1 << DSLSQLParser.T__27) | (1 << DSLSQLParser.T__28) | (1 << DSLSQLParser.T__29) | (1 << DSLSQLParser.T__30) | (1 << DSLSQLParser.T__31) | (1 << DSLSQLParser.T__32) | (1 << DSLSQLParser.T__33) | (1 << DSLSQLParser.T__34) | (1 << DSLSQLParser.T__35) | (1 << DSLSQLParser.T__36) | (1 << DSLSQLParser.T__37) | (1 << DSLSQLParser.T__38) | (1 << DSLSQLParser.T__39) | (1 << DSLSQLParser.STRING) | (1 << DSLSQLParser.BLOCK_STRING) | (1 << DSLSQLParser.IDENTIFIER) | (1 << DSLSQLParser.BACKQUOTED_IDENTIFIER) | (1 << DSLSQLParser.SIMPLE_COMMENT) | (1 << DSLSQLParser.BRACKETED_EMPTY_COMMENT) | (1 << DSLSQLParser.BRACKETED_COMMENT) | (1 << DSLSQLParser.WS) | (1 << DSLSQLParser.UNRECOGNIZED))) != 0):
                    self.state = 124
                    _la = self._input.LA(1)
                    if _la <= 0 or _la==DSLSQLParser.T__11:
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 129
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [DSLSQLParser.T__18, DSLSQLParser.T__19]:
                self.enterOuterAlt(localctx, 7)
                self.state = 130
                _la = self._input.LA(1)
                if not(_la==DSLSQLParser.T__18 or _la==DSLSQLParser.T__19):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DSLSQLParser.T__0) | (1 << DSLSQLParser.T__1) | (1 << DSLSQLParser.T__2) | (1 << DSLSQLParser.T__3) | (1 << DSLSQLParser.T__4) | (1 << DSLSQLParser.T__5) | (1 << DSLSQLParser.T__6) | (1 << DSLSQLParser.T__7) | (1 << DSLSQLParser.T__8) | (1 << DSLSQLParser.T__9) | (1 << DSLSQLParser.T__10) | (1 << DSLSQLParser.T__12) | (1 << DSLSQLParser.T__13) | (1 << DSLSQLParser.T__14) | (1 << DSLSQLParser.T__15) | (1 << DSLSQLParser.T__16) | (1 << DSLSQLParser.T__17) | (1 << DSLSQLParser.T__18) | (1 << DSLSQLParser.T__19) | (1 << DSLSQLParser.T__20) | (1 << DSLSQLParser.T__21) | (1 << DSLSQLParser.T__22) | (1 << DSLSQLParser.T__23) | (1 << DSLSQLParser.T__24) | (1 << DSLSQLParser.T__25) | (1 << DSLSQLParser.T__26) | (1 << DSLSQLParser.T__27) | (1 << DSLSQLParser.T__28) | (1 << DSLSQLParser.T__29) | (1 << DSLSQLParser.T__30) | (1 << DSLSQLParser.T__31) | (1 << DSLSQLParser.T__32) | (1 << DSLSQLParser.T__33) | (1 << DSLSQLParser.T__34) | (1 << DSLSQLParser.T__35) | (1 << DSLSQLParser.T__36) | (1 << DSLSQLParser.T__37) | (1 << DSLSQLParser.T__38) | (1 << DSLSQLParser.T__39) | (1 << DSLSQLParser.STRING) | (1 << DSLSQLParser.BLOCK_STRING) | (1 << DSLSQLParser.IDENTIFIER) | (1 << DSLSQLParser.BACKQUOTED_IDENTIFIER) | (1 << DSLSQLParser.SIMPLE_COMMENT) | (1 << DSLSQLParser.BRACKETED_EMPTY_COMMENT) | (1 << DSLSQLParser.BRACKETED_COMMENT) | (1 << DSLSQLParser.WS) | (1 << DSLSQLParser.UNRECOGNIZED))) != 0):
                    self.state = 131
                    _la = self._input.LA(1)
                    if _la <= 0 or _la==DSLSQLParser.T__11:
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 136
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [DSLSQLParser.T__20, DSLSQLParser.T__21]:
                self.enterOuterAlt(localctx, 8)
                self.state = 137
                _la = self._input.LA(1)
                if not(_la==DSLSQLParser.T__20 or _la==DSLSQLParser.T__21):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 138
                self.setKey()
                self.state = 139
                self.match(DSLSQLParser.T__22)
                self.state = 140
                self.setValue()
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==DSLSQLParser.T__3 or _la==DSLSQLParser.T__4:
                    self.state = 141
                    _la = self._input.LA(1)
                    if not(_la==DSLSQLParser.T__3 or _la==DSLSQLParser.T__4):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==DSLSQLParser.IDENTIFIER or _la==DSLSQLParser.BACKQUOTED_IDENTIFIER:
                    self.state = 144
                    self.expression()


                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==DSLSQLParser.T__39:
                    self.state = 147
                    self.booleanExpression()
                    self.state = 152
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [DSLSQLParser.T__23, DSLSQLParser.T__24]:
                self.enterOuterAlt(localctx, 9)
                self.state = 153
                _la = self._input.LA(1)
                if not(_la==DSLSQLParser.T__23 or _la==DSLSQLParser.T__24):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 154
                self.format_type()
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==DSLSQLParser.T__3 or _la==DSLSQLParser.T__4:
                    self.state = 155
                    _la = self._input.LA(1)
                    if not(_la==DSLSQLParser.T__3 or _la==DSLSQLParser.T__4):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 159
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==DSLSQLParser.IDENTIFIER or _la==DSLSQLParser.BACKQUOTED_IDENTIFIER:
                    self.state = 158
                    self.expression()


                self.state = 164
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==DSLSQLParser.T__39:
                    self.state = 161
                    self.booleanExpression()
                    self.state = 166
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 169
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==DSLSQLParser.T__5:
                    self.state = 167
                    self.match(DSLSQLParser.T__5)
                    self.state = 168
                    self.db()

